feat: added character creation page
